@@ -9,6 +9,8 @@ Release @version@-@release@ Start 11/09/2023 End --/--/----
 - 13/09/2023
 04. maildirdeliver.c: BUG. Remove NULL character appended to rpline, dtline
 05. updated dot-qmail, maildirdeliver, qmail-command man pages
+- 14/09/2023
+06. svctool: fixed path/MAXDAEMONS in tcpserver run scripts
 
 * Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
 Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
